:lipstick: Fixed alignments

--- a/src/app/users/list/user-list/user-list.component.scss
+++ b/src/app/users/list/user-list/user-list.component.scss
@@ -19,4 +19,9 @@
 
 table .input-group {
   width: 88%;
+
+  input,
+  select {
+    border-radius: 5px;
+  }
 }
